recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:9: error: not found: value lenght
    avance(lenght);
           ^Spiral:11: error: not found: value lenght
    spiral(steps-1, angle, lenght+increment, increment);
                           ^