recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  
  if(steps == 0){
    
    return;
    
  } else{
    
    avance(lenght);
    gauche(angle);
    spiral(steps-1, angle, lenght+increment, increment);
    
  }
  
}